winningLine alignment issues

--- a/styles.css
+++ b/styles.css
@@ -26,9 +26,10 @@ body{
   background-color: #2aff3c;
   font-size: 0px;
   border-radius: 5px;
-  width: 300px;
+  width: 305px;
   height: 5px;
   position: absolute;
+  z-index: 9;
   padding: 5px 5px 5px 5px;
 }
 /*
@@ -37,43 +38,56 @@ body{
 
 #none{
   opacity: 0;
+  transition: ease-in;
 }
 #horizontal_1{
   top: 16%;
-  left: 32%;
+  grid-column: 1/3;
+  left: 29px;
 }
 #horizontal_2{
   top: 48.5%;
-  left: 32%;
+  grid-column: 1/3;
+  left: 29px;
 }
 #horizontal_3{
   top: 82%;
-  left: 32%;
+  grid-column: 1/3;
+  left: 29px;
 }
 #vertical_1{
-  top: 48%;
-  left: 17%;
-  transform: rotate(90deg);
+  top: 19%;
+  left: 56px;
+  grid-column: 1;
+  grid-row: 1/3;
+  width: 5px;
+  height: 270px;
 }
 #vertical_2{
-  top: 48%;
-  left: 31.5%;
-  transform: rotate(90deg);
+  top: 19%;
+  left: 56px;
+  grid-column: 2;
+  grid-row: 1/3;
+  width: 5px;
+  height: 270px;
 }
 #vertical_3{
-  top: 48%;
-  left: 46.5%;
-  transform: rotate(90deg);
+  top: 19%;
+  left: 56px;
+  grid-column: 3;
+  grid-row: 1/3;
+  width: 5px;
+  height: 270px;
 }
 #diagonal_1{
   top: 48%;
-  left: 28%;
+  grid-column: 1/3;
   width: 360px;
   transform: rotate(45deg);
 }
 #diagonal_2{
   top: 48%;
-  left: 28%;
+  grid-column: 1/3;
   width: 360px;
   transform: rotate(-45deg);
 }
@@ -93,7 +107,7 @@ div{
   position: relative;
   display: grid;
   justify-content: center;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: 125px 125px 125px;
   font-size: 75px; 
   background-image: linear-gradient(var(--blue2),var(--blue1));
 }
@@ -106,7 +120,7 @@ div{
   width: 75px;
   height: 75px;
   border-radius: 10px;
-  padding: 17px 20px 20px 20px;
+  padding: 20px 20px 20px 20px;
   margin: 5px;
   text-align: center;
 }
